@@ -2,6 +2,7 @@
 <hr>
 - remove old configs (alfredsx)
 - cosmetics (mamba)
+- fix $isColorpicker (mamba)
 
 <h5>5.00 Beta 1 (XOOPS 2.5.10) [NOT RELEASED]</h5>  Dev: Xoops 2.5.10, PHP 7.3.1
 <hr>
